--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,3 +63,24 @@ hr {
 .sale-tag {
   background-color: #cc0a0a;
 }
+
+.chatDiv {
+  background-color: orange;
+  padding: 10px;
+  margin: 20px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.chatDiv::after {
+  content: '';
+  position: absolute;
+  bottom: -14px;
+  right: 25px; /* Adjust as needed to position the diamond */
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent orange; /* Adjust color as needed */
+  transform: rotate(90deg);
+}
